--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ $(function(){
         <h2>Mostafa Hadavand, PhD</h2>
     <h1></h1>
         <p>
-          <img class="center" src="images/Mostafa.jpg" height="160" width="140"/>
+          <img class="center" src="./images/Mostafa.jpg" height="160" width="140"/>
             <strong> I did my PhD in Geostatistics in university of Alberta. Geostatistics is a branch of applied statistics with focus on probabilistic study of spatial phenomena. Currently, I work as a data scientist at Silver Creek Software in Enterprise Data Warehouse (EDW) project for Alberta Environment and Parks (AEP). Also, I work as a research associate and geostatistician at Centre for Computational Geostatistics (<a href="CCG.html">CCG</a>), University of Alberta.</strong></p>
 
       <!-- <div class="center"><img src="images/Logo.png" alt="" width="300" height="70" align="right" /></div> -->
@@ -131,7 +131,7 @@ $(function(){
 
       <!-- GITHUB Logo -->
       <div align="lef">
-      <a href="https://github.com/hadavand85"><img src="./images/github.png" height="25" width="25" alt="Logo" /></a>
+      <a href="https://github.com/MHadavand"><img src="./images/github.png" height="25" width="25" alt="Logo" /></a>
       <a href="https://www.linkedin.com/in/mostafa-hadavand-77a55051"><img src="./images/linkedin.png" height="25" width="25" alt="Logo" /></a>
       </div>
 
