--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Analytics lead, Silver Creek, Edmonton Alberta.
           <a href="mailto:mostafa.hadavand@silvercreeksoftware.com">mostafa.hadavand@silvercreeksoftware.com</a>
         </div>
-        <p class="lead mb-5">I am interested in statistics</p>
+        <p class="lead mb-5">I am geo-statistician and interested in statistics, mathematical modelling, data science </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/mostafa-hadavand-phd-77a55051/">
             <i class="fab fa-linkedin-in"></i>
@@ -89,20 +89,20 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Analytics Lead, Business Intelligence Consultant</h3>
+            <div class="subheading mb-3">Silver Creek, Edmonton, AB, Canada.</div>
+            <p>Bring the power of data analysis and business intelligence to decision making</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">June 2017 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Research Associate, Geo-statistician</h3>
+            <div class="subheading mb-3">University of Alberta/div>
+            <p>Spatial data analysis, uncertainty quantification and improved decision making.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2011 - March 2013</span>
@@ -143,24 +143,27 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">University of Alberta</h3>
+            <div class="subheading mb-3">Ph.D., Geo-Statistics</div>
+            <div>School of Mining and Petroleum Engineering</div>
+            <div>Research: Spatial Statistics, Multivariate Data Assimilation, Uncertainty Management, Integration of 4D Seismic data</div>
+            <div>Thesis: <a href="https://www.library.ualberta.ca/" title="https://www.library.ualberta.ca/">Integration of 4D Seismic Data in Reservoir Characterization with Facies Parameter Uncertainty</a></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">January 2014 - September 2017</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">University of Western Ontario</h3>
+            <div class="subheading mb-3">M.ESc.,Mechanical Engineering</div>
+            <div>NSERC CAMI Program Scholar at Center of Canadian Surgical Technologies and Advanced Robotics</div>
+            <div>Research: Mechanical Design, Surgical Robotics and Mechatronics</div>
+            <div>Thesis: <a href="http://ir.lib.uwo.ca/etd/1994/" title="http://ir.lib.uwo.ca/etd/1994/">Design and Development of a Surgical Robot for Needle-Based Interventions</a></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2006 - May 2010</span>
           </div>
         </div>
 
