--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Research Associate, Geo-statistician</h3>
-            <div class="subheading mb-3">University of Alberta/div>
+            <div class="subheading mb-3">University of Alberta</div>
             <p>Spatial data analysis, uncertainty quantification and improved decision making.</p>
           </div>
           <div class="resume-date text-md-right">
