--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -49,11 +49,14 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
         </li>
       </ul>
     </div>
@@ -101,33 +104,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Research Associate, Geo-statistician</h3>
-            <div class="subheading mb-3">University of Alberta</div>
+            <div class="subheading mb-3"><a href="http://www.ccgalberta.com/" title="http://www.ccgalberta.com/">Center for Computational Geostatistics (CCG)</a>, University of Alberta</div>
             <p>Spatial data analysis, uncertainty quantification and improved decision making.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">January 2014 - Present</span>
           </div>
         </div>
 
@@ -176,43 +157,16 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Programming Languages &amp; Technologies</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+            <i class="fab fa-python"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-julia"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i class="fab fa-databricks"></i>
           </li>
         </ul>
 
@@ -220,29 +174,32 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Multivariate data analysis and visualization</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Azure Devops &amp; Github workflows</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            Business Intelligence</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              PowerBI &amp; PlotlyDash</li>
         </ul>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
-    </section>
+    </section> -->
 
     <hr class="m-0">
 
@@ -252,33 +209,84 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            President’s Doctoral Prize of Distinction ($10K) 2016-2018</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            NSERC Postgraduate Scholarship PGSD ($21K) 2016-2018</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            Doctoral Recruitment Scholarship ($5K) 2014 </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            Queen Elizabeth II scholarship ($15K) 2014-2015</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            NSERC CAMI Program Supplementary Funds ($15K) 2012-2014</li>
         </ul>
       </div>
     </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
+      <div class="w-100">
+        <h2 class="mb-5">Publications</h2>
+        <strong><strong>Peer Reviewed Journal Papers:</strong></strong>
+<p>
+Hadavand, M., & Deutsch, C. V. (2017). <a href="http://www.sciencedirect.com/science/article/pii/S0920410516309433" title="http://www.sciencedirect.com/science/article/pii/S0920410516309433"> Facies Proportion Uncertainty in Presence of a Trend </a>. Journal of Petroleum Science and Engineering.
+<p>
+Hadavand, M., & Deutsch, C. V. (2016). <a href="https://www.onepetro.org/journal-paper/SPE-184390-PA" title="https://www.onepetro.org/journal-paper/SPE-184390-PA"> A Practical Methodology For Integration of 4D Seismic in Steam-Assisted-Gravity-Drainage Reservoir Characterization </a>. SPE Journal of ReservoirEvaluation & Engineering.
+<p>
+
+	
+<strong><strong>CCG Papers and Guidebooks:</strong></strong>
+
+<P>
+Mostafa Hadavand & Clayton V. Deutsch, 2019, Multivariate Data Imputation Using Generalized Lambda Distribution and Multi Layer Perceptron Neural Networks, CCG Paper 2019-126, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada
+</P>
+<p>
+Mostafa Hadavand and Clayton V. Deutsch. (2016) Improved Sampling of Multivariate Parameter Uncertainty, CCG Paper 2016-123, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada.
+<p>
+Mostafa Hadavand and Clayton V. Deutsch. (2016) Multivariate Spatial Bootstrap Using Sequential Stochastic Simulation at Data Locations, CCG Paper 2016-124, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada.
+<p>
+Mostafa Hadavand and Clayton V. Deutsch. (2016) A comprehensive Example on SAGD Characterization and Geostatistical Anomaly Enforcement, CCG Paper 2016-203, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada.
+<p>
+Mostafa Hadavand and Clayton V. Deutsch. (2016) Updated BlockSIS (sequential indicator simulation) for Proportion Reproduction, CCG Paper 2016-411, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada
+<p>
+Mostafa Hadavand and Clayton V. Deutsch. (2016) Proportion Uncertainty for Categorical Variables in Presence of a Trend, CCG Paper 2016-104, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada
+<p>
+Mostafa Hadavand, Clayton V. Deutsch. (2015) Improving SAGD Reservoir Modeling by Geostatistical Enforcement of Anomalies in Fluid Flow, CCG Paper 2015-203, Centre of Computational Geostatistics (CCG), Edmonton, Alberta.
+<p>
+Mostafa Hadavand, Clayton V. Deutsch. (2015) Engineering Rotation Angles Translated to GSLIB Convention, CCG Paper 2015-134, Centre of Computational Geostatistics (CCG), Edmonton, Alberta.
+<p>
+Mostafa Hadavand, Clayton v. Deutsch. (2014) An Example Application of Ensemble Kalman Filter with Flow-based Pressure Data, Centre of Computational Geostatistics (CCG), Edmonton, Alberta.
+		
+
+<p>
+<strong><strong>Other Peer Reviewed Publications:</strong></strong>
+<p>
+
+Hadavand, M., Mirbagheri, A., Behzadipour, S., & Farahmand, F. (2014). A novel remote center of motion mechanism for the force-reflective master robot of haptic tele-surgery systems. The International Journal of Medical Robotics and Computer Assisted Surgery, 10(2), 129-139.
+<p>
+
+Hadavand, M., Naish, M. D., & Patel, R. V. (2014, August). A parallel Remote Center of Motion mechanism for needle-based medical interventions. In Biomedical Robotics and Biomechatronics (2014 5th IEEE RAS & EMBS International Conference on (pp. 1-6). IEEE.
+<P>
+Hadavand, M., Mirbagheri, A., Salarieh, H., & Farahmand, F. (2011, August). Design of a force-reflective master robot for haptic telesurgery applications: Robomaster1. In Engineering in Medicine and Biology Society, EMBC, 2011 Annual International Conference of the IEEE (pp. 7037-7040). IEEE.
+<p>
+Khalaji, I., Hadavand, M., Asadian, A., Patel, R. V., & Naish, M. D. (2013, November). Analysis of needle-tissue friction during vibration-assisted needle insertion. In 2013 IEEE/RSJ International Conference on Intelligent Robots and Systems (pp. 4099-4104). IEEE.
+<p>
+
+<strong><strong>Thesis:</strong></strong>
+<p>
+Hadavand, M., <a href="https://www.library.ualberta.ca/" title="https://www.library.ualberta.ca/"> Integration of 4D Seismic Data in Reservoir Characterization with Facies Parameter Uncertainty </a>, University of Alberta, Edmonton, Alberta, Canada, September 2017.
+</p>
+<p>
+Hadavand, M., <a href="http://ir.lib.uwo.ca/etd/1994/" title="http://ir.lib.uwo.ca/etd/1994/"> Design and Development of a Surgical Robot for Needle-Based Interventions</a>, University of Western Ontario, London, Ontario, Canada, April 2014.
+</p>
+<br/><br/>
+<div class="center"><p>Copyright &copy; Mostafa Hadavand</p></div>
+
+      </div>
+    </section>
+
 
   </div>
 
