minor modifications of data analysis section

--- a/index.html
+++ b/index.html
@@ -207,9 +207,10 @@
     <hr class="m-0">
     
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="DataAnalysis">
-      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="DataAnalysis">
+      <div class="w-100">
+        <h2 class="mb-5">Data Analysis</h2>
         <div class="field-item even" property="content:encoded"><iframe width="300%" height="600" src="./static/DataAnalysis/welcome.html" frameborder="0" allowFullScreen="true"></iframe></div>
-      </section>
+      </div>
     </section>
 
     <hr class="m-0">
