--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="subheading mb-5">Analytics lead, Silver Creek, Edmonton Alberta.
           <a href="mailto:mostafa.hadavand@silvercreeksoftware.com">mostafa.hadavand@silvercreeksoftware.com</a>
         </div>
-        <p class="lead mb-5">I am geo-statistician and interested in statistics, mathematical modelling, data science </p>
+        <p class="lead mb-5">I am a geo-statistician and interested in statistics, mathematical modelling, data science and machine learning </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/mostafa-hadavand-phd-77a55051/">
             <i class="fab fa-linkedin-in"></i>
@@ -100,7 +100,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Analytics Lead, Business Intelligence Consultant</h3>
             <div class="subheading mb-3">Silver Creek, Edmonton, AB, Canada.</div>
-            <p>Bring the power of data analysis and business intelligence to decision making</p>
+            <p>Bring the power of data science and business intelligence to decision making</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2017 - Present</span>
@@ -111,7 +111,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Research Associate, Geo-statistician</h3>
             <div class="subheading mb-3"><a href="http://www.ccgalberta.com/" title="http://www.ccgalberta.com/">Center for Computational Geostatistics (CCG)</a>, University of Alberta</div>
-            <p>Spatial data analysis, uncertainty quantification and improved decision making.</p>
+            <p>Spatial statistics, resource modelling/estimation, uncertainty quantification and improved decision making.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2014 - Present</span>
