--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
 <p>
 Hadavand, M., & Deutsch, C. V. (2017). <a href="http://www.sciencedirect.com/science/article/pii/S0920410516309433" title="http://www.sciencedirect.com/science/article/pii/S0920410516309433"> Facies Proportion Uncertainty in Presence of a Trend </a>. Journal of Petroleum Science and Engineering.
 <p>
+  Hadavand, M., & Deutsch, C. V. and et al (2019). <a href="https://www.onepetro.org/journal-paper/SPE-191359-PA"> Integration of 4D Seismic in Steam-Assisted-Gravity-Drainage Reservoir Characterization </a>. SPE Journal of reservoir evaluation and engineering.
+<p>
 Hadavand, M., & Deutsch, C. V. (2016). <a href="https://www.onepetro.org/journal-paper/SPE-184390-PA" title="https://www.onepetro.org/journal-paper/SPE-184390-PA"> A Practical Methodology For Integration of 4D Seismic in Steam-Assisted-Gravity-Drainage Reservoir Characterization </a>. SPE Journal of ReservoirEvaluation & Engineering.
 <p>
 
