--- a/index.html
+++ b/index.html
@@ -257,8 +257,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
       <div class="w-100">
         <h2 class="mb-5">Publications</h2>
-        <strong><strong>Peer Reviewed Journal Papers:</strong></strong>
 
+        <strong><strong>Peer Reviewed Journal Papers:</strong></strong>
+        <p></p>
         <p>
         Hadavand, M., & Deutsch, C. V. and et al (2019). <a href="https://www.onepetro.org/journal-paper/SPE-191359-PA"> Integration of 4D Seismic in Steam-Assisted-Gravity-Drainage Reservoir Characterization </a>. SPE Journal of reservoir evaluation and engineering.
         <p>
@@ -270,6 +271,15 @@
 
         <strong><strong>CCG Papers and Guidebooks:</strong></strong>
 
+        <P>
+          Mostafa Hadavand, 2020, pip Install Pygeostat,, CCG Paper 2020-129, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada
+        </P>
+        <P>
+          Mostafa Hadavand & Clayton V. Deutsch, 2020, How Many Gaussian Componenets for Fitting GMM, CCG Paper 2020-148, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada
+        </P>
+        <P>
+          Mostafa Hadavand & Clayton V. Deutsch, 2020, Spatial Multivariate Data Imputation Using Generalized Lambda Distribution, CCG Paper 2020-147, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada
+        </P>
         <P>
         Mostafa Hadavand & Clayton V. Deutsch, 2019, Multivariate Data Imputation Using Generalized Lambda Distribution and Multi Layer Perceptron Neural Networks, CCG Paper 2019-126, Centre for Computational Geostatistics, University of Alberta, Edmonton, Canada
         </P>
